<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xjtu.kangy.WereWolf.SetupActivity">

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/TVGameNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apptitle"
        android:layout_marginTop="7sp"
        android:text="@string/players_num"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etGameNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apptitle"
        android:layout_toEndOf="@id/TVGameNumber"
        android:hint="@string/input_playersnum_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvWolvesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVGameNumber"
        android:layout_marginTop="7sp"
        android:text="@string/wolves_num"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etWolvesNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etGameNumber"
        android:layout_toEndOf="@id/tvWolvesNumber"
        android:hint="@string/input_wolvesnum_hint"
        android:inputType="number" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_game"
        android:textSize="26sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnStart"
        android:layout_below="@id/etWolvesNumber">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/Table_gods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:layout_margin="10sp">

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/wolfgod1"
                        android:layout_weight="1"
                        android:text="@string/wolfgod1" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/wolfgod2"
                        android:layout_weight="1"
                        android:text="@string/wolfgod2" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/wolfgod3"
                        android:layout_weight="1"
                        android:text="@string/wolfgod3" />
                </TableRow>

                <TextView
                    android:id="@+id/TVgods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etWolvesNumber"
                    android:gravity="center_horizontal"
                    android:text="@string/choose_gods"
                    android:textSize="20sp" />

                <TableRow android:layout_margin="10sp">

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god1"
                        android:layout_weight="1"
                        android:text="@string/god1" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god2"
                        android:layout_weight="1"
                        android:text="@string/god2" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god3"
                        android:layout_weight="1"
                        android:text="@string/god3" />
                </TableRow>

                <TableRow android:layout_margin="10sp">

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god4"
                        android:layout_weight="1"
                        android:text="@string/god4" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god5"
                        android:layout_weight="1"
                        android:text="@string/god5" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god6"
                        android:layout_weight="1"
                        android:text="@string/god6" />
                </TableRow>

                <TableRow android:layout_margin="10sp">

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god7"
                        android:layout_weight="1"
                        android:text="@string/god7" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god8"
                        android:layout_weight="1"
                        android:text="@string/god8" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCheckedBox
                        android:id="@+id/god9"
                        android:layout_weight="1"
                        android:text="@string/god9" />
                </TableRow>

                <TableRow android:layout_margin="10sp">

                    <com.xjtu.kangy.WereWolf.widget.GodsCustomCheckedBox
                        android:id="@+id/godcustom1"
                        android:layout_weight="1" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCustomCheckedBox
                        android:id="@+id/godcustom2"
                        android:layout_weight="1" />

                    <com.xjtu.kangy.WereWolf.widget.GodsCustomCheckedBox
                        android:id="@+id/godcustom3"
                        android:layout_weight="1" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    <!--<android.support.v4.widget.DrawerLayout-->
    <!--android:id="@+id/drawerLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="@string/app_name"-->
    <!--android:textSize="100dp"/>-->
    <!--</android.support.v4.widget.DrawerLayout>-->
</RelativeLayout>
